<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        android:onClick="activityFavorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/contact"
        android:contentDescription="@string/content_description_contact"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutOf"
        android:contentDescription="@string/content_description_about_of"
        android:title="@string/about_of"
        app:showAsAction="never" />

</menu>