<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/dog08" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardview_title"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_boneRate01"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_bone_rate" />

                <ImageView
                    android:id="@+id/ic_boneRate02"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_bone_rate" />

                <ImageView
                    android:id="@+id/ic_boneRate03"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_bone_rate" />

                <ImageView
                    android:id="@+id/ic_boneRate04"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_bone_rate" />

                <ImageView
                    android:id="@+id/ic_boneRate05"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_bone" />

                <TextView
                    android:id="@+id/text_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_rate"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cardview_description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/icons" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_addFavorite"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cardview_action_01"
                app:icon="@drawable/ic_bone"
                app:iconPadding="8dp"
                app:iconSize="16dp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>