<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_contact"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/page_title_contact" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="40dp"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/ic_person"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:layout_constraintBottom_toBottomOf="@id/ic_person"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_person"
                app:layout_constraintTop_toTopOf="@+id/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ic_mail"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_mail"
                app:layout_constraintEnd_toEndOf="@+id/ic_person"
                app:layout_constraintStart_toStartOf="@+id/ic_person"
                app:layout_constraintTop_toBottomOf="@+id/ic_person" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/mail"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeErrorColor="@color/colorError"
                app:endIconMode="clear_text"
                app:errorEnabled="false"
                app:errorIconDrawable="@drawable/ic_error"
                app:errorIconTint="@color/colorError"
                app:errorTextColor="@color/colorError"
                app:helperText="@string/required"
                app:helperTextEnabled="true"
                app:hintAnimationEnabled="true"
                app:layout_constraintBottom_toBottomOf="@id/ic_mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_mail"
                app:layout_constraintTop_toTopOf="@+id/ic_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ic_subject"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="64dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_subject"
                app:layout_constraintEnd_toEndOf="@+id/ic_mail"
                app:layout_constraintStart_toStartOf="@+id/ic_mail"
                app:layout_constraintTop_toBottomOf="@+id/ic_mail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/subject"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:layout_constraintBottom_toBottomOf="@id/ic_subject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_subject"
                app:layout_constraintTop_toTopOf="@+id/ic_subject">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_message"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="56dp"
                android:text="@string/message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_subject" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_message"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintHeight_max="240dp"
                app:layout_constraintHeight_min="120dp"
                app:layout_constraintTop_toBottomOf="@id/text_message"
                app:strokeColor="@color/material_on_surface_stroke"
                app:strokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/text_requiredMessage"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/required"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_message" />

            <TextView
                android:id="@+id/text_errorMessage"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/error_input_empty"
                android:textColor="@color/colorError"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_message" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="589dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sendMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>